2004-07-08 Miguel Guzman <aglanor [at] telefonica [dot] net>

	* ServerService.cpp: made it more robust against Eris errors,
	  catching more exceptions and being more verbose.

2004-02-27  Al Riddoch  <alriddoch@zepler.org>

	* Fix deps so that we no longer get 2 potentially conflicting
	  versions of wfmath.

	* src/services/gui/widget/Widget.cpp,
	  src/services/gui/widget/Widget.h: Remove some incorrect use
	  of the inline keyword.

	* src/services/metaserver/MetaserverService.cpp,
	  src/services/platform/BitmapRenderer.cpp,
	  src/services/platform/BorderRenderer.cpp: Get rid of
	  some silly warnings.

2004-02-19 Ron Steinke <rsteinke@w-link.net>
	* configure.ac: Cleaned up the OpenAL and libxml error messages.

2004-02-15 Ron Steinke <rsteinke@w-link.net>
	* configure.ac: GL test for mingw32, take 4.

2004-02-14 Ron Steinke <rsteinke@w-link.net>
	* configure.ac: GL test for mingw32, take 3.

2004-02-10 Ron Steinke <rsteinke@w-link.net>
	* configure.ac: GL test for mingw32, take 2.

2004-02-09 Ron Steinke <rsteinke@w-link.net>
	* configure.ac: Modifed open GL test to also work on win32.

2004-02-08 Ron Steinke <rsteinke@w-link.net>
	* configure.ac, acinclude.m4: Use new combined macro for libz, libpng,
	  SDL and SDL_image check that will also work under win32.

2004-01-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* Fixed ogre component to get less warnings.

2004-01-26 Al Riddoch <alriddoch@zepler.org>

	* src/services/server/ServerService.cpp,
	  src/main/Dime.cpp: Fixes to build with the latest updates
	  to Atlas-C++ and Eris.

	* src/components/ogre/Console.cpp: Include fixes to build
	  with the latest Ogre.

2004-01-20 Ron Steinke <rsteinke@w-link.net>
	* configure.ac: Add $SDL_LIBS as the 'additional libs' argument
	  of AC_CHECK_LIB for SDL_image. This will hopefully allow the
	  test to link on win32.

2003-11-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
        * src/components/ogre: fixed rotation and viewing for the Avatar. 
