@@ -5,4 +5,6 @@ Zip=../../../media/ogre/OgreCore.zip
 #Zip=../../../media/ogre/dot3bump.zip
 #Zip=./media/squirel_of_doom.zip
 FileSystem=../../../media/ogre
+FileSystem=../../../media/ogre/pig
+FileSystem=../../../media/ogre/squirrel
 FileSystem=../../../media/common
